# palette_refined

./: .gitignore  CMakeLists.txt  README.md  package.xml  settings.yaml
arm_node/: arm_node.ino
include/: ai.h  board.h  frame.h  game.h  monitor.h  predefined_dictionaries.hpp  utils.h
src/: ai.cc  board.cc  camera_node.cc  frame.cc  game.cc  main.cc  monitor.cc  utils.cc
